# IVtools

./: CMakeLists.txt  LICENSE.md  README.md  cpm.dependencies
.github/workflows/: ci_on_pr.yml
lib/IVSigma/: .gitrepo
lib/IVio/: .gitrepo
lib/clice/: .gitrepo
lib/fmindex-collection/: .gitrepo
lib/fmindex-collection/src/fmindex-collection/fmindex/: merge.h
lib/fmindex-collection/src/search_schemes/: expand.h
src/iv/: CMakeLists.txt  bwt.cpp  columba_prepare.cpp  error_fmt.h  fasta.cpp  inspect_fasta.cpp  isNonRedundant.h  main.cpp  read_simulator.cpp  search_scheme.cpp  tikz.h
